@@ -82,7 +82,11 @@ cyg_libc_stdio_flush_all_but( Cyg_StdioStream *not_this_stream )
 
         for (i=0; (i<FOPEN_MAX) && !err; i++) {
             if (files_flushed[i] == false) {
-                
+                // Don't let the files table change e.g. by closing the file.
+                if ( Cyg_libc_stdio_files::lock() ) {
+                    err = EINTR;
+                    break;
+                }
                 stream = Cyg_libc_stdio_files::get_file_stream(i);
                 
                 if ((stream == NULL) || (stream == not_this_stream)) {
@@ -118,6 +122,10 @@ cyg_libc_stdio_flush_all_but( Cyg_StdioStream *not_this_stream )
                         }
                     }
                 } // else
+                // We can unlock and relock every loop as we only care
+                // about flushing streams that were open prior to this
+                // call. Any new streams can be ignored.
+                Cyg_libc_stdio_files::unlock()
             } // if
         } // for
     } // do
